# keras-geometric

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  FIXES.md  LICENSE  README.md  pyproject.toml  pyrefly.toml  simple_gatv2_example_fixed.py  simple_gatv2_test.py  simple_gcn_test.py  simple_sage_test.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci-cd.yml  ci.yml  cleanup.yml  performance.yml  pr-labeler.yml
docs/: CI_CD_GUIDE.md  index.md
docs/api_reference/: datasets.md  index.md  layers.md  utils.md
docs/tutorials/: getting_started.md  index.md  node_classification.md
examples/: gatv2_example.py  gcn_example.py  graphsage_example.py  pooling_example.py  simple_gatv2_example.py  simple_gatv2_example_fixed.py  simple_gcn_example.py  simple_gin_example.py  simple_sage_example.py
scripts/: README.md  create_mr.sh  create_release.sh  verify_editable_install.sh
src/keras-geometric/: gcn_conv.py  gin_conv.py  message_passing.py
src/keras_geometric/: __init__.py  gcn_conv.py
src/keras_geometric/datasets/: __init__.py  base.py  citation.py  cora.py
src/keras_geometric/layers/: __init__.py  gatv2_conv.py  gcn_conv.py  gin_conv.py  message_passing.py  sage_conv.py
src/keras_geometric/layers/pooling/: __init__.py  attention_pooling.py  global_pooling.py
src/keras_geometric/utils/: __init__.py  data_utils.py  main.py
tests/: __init__.py  conftest.py  test_gatv2_conv.py  test_gcn_conv.py  test_gin_conv.py  test_graphsage_conv.py  test_message_passing.py  test_pooling.py
tests/backends/: __init__.py  test_backend_compatibility.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_model_integration.py
tests/performance/: __init__.py  test_large_graphs.py
tests/unit/: __init__.py  test_batch_processing.py  test_error_handling.py
tests/unit/layers/: __init__.py
tests/unit/utils/: __init__.py
